fix-the-style-add-bootsrap-import-add-the-sign-up-ui

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="mainContainer">
     <app-header></app-header>
-    <h1>This is app</h1>
-    <app-fruits-store></app-fruits-store>
+    <!-- <h1>This is app</h1> -->
+    <!-- <app-fruits-store></app-fruits-store> -->
     <!-- <app-login></app-login> -->
+    <app-signup></app-signup>
 </div>
