--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="headerContainer">
     <div class="headerTextContainer" >
         <p class="headerText">Fruits Store</p>
     </div>
