--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,5 +1,5 @@
 @import "../../../assets/scss/constants.scss";
-.container {
+.headerContainer {
     display: flex;
     justify-content: space-between;
     background-color: $blue_color;
