--- a/src/app/containers/signup/signup.component.scss
+++ b/src/app/containers/signup/signup.component.scss
@@ -1,8 +1,5 @@
 @import "../../../assets/scss/constants.scss";
 
-.login {
-  font-size: 20px;
-}
 .container {
   margin-top: 30px;
 }
@@ -10,23 +7,14 @@
 input.ng-invalid.ng-touched {
   border: 1px solid $red_error_color;
 }
-.block {
-  display: block;
-}
-.emailLabel {
-  margin-right: 40px;
-}
-.passwordLabel {
-  margin-right: 16px;
-}
-.fieldContainer {
-  margin: 15px;
+textarea{
+  width: 100%;
 }
 .btnsContainer{
-  display: flex;
-   justify-content: space-between;
-   margin-bottom: 20px;
- }
+ display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
 button {
   padding: 5px;
   font-size: 20px;
@@ -42,3 +30,4 @@ button {
   border-color: $green_color;
   color: $white_color;
 }
+
