complete-routing-add-nav

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
     <!-- <h1>This is app</h1> -->
     <!-- <app-fruits-store></app-fruits-store> -->
     <!-- <app-login></app-login> -->
-    <app-signup></app-signup>
+    <!-- <app-signup></app-signup> -->
+    <router-outlet></router-outlet>
 </div>
