--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,4 +5,8 @@
     <div class="imgContainer">
         <img src="../../../assets/img/logo-transparent.png" >
     </div>
+    <div class="headerTextContainer">
+        <a href="/login">Login</a>
+        <a href="/">fruits</a>
+    </div>
 </div>
