--- a/src/app/containers/fruits-store/fruits-store.component.scss
+++ b/src/app/containers/fruits-store/fruits-store.component.scss
@@ -12,6 +12,7 @@ h3 {
   display: flex;
   justify-content: space-evenly;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 button {
   color: $white_color;
