--- a/src/app/containers/signup/signup.component.html
+++ b/src/app/containers/signup/signup.component.html
@@ -103,7 +103,7 @@
                 </span>
                 <div class="btnsContainer" >
                     <div>
-                        <button class="secondary" type="button">Back to Login</button>
+                        <button class="secondary" type="button" (click)="onLogin()" >Back to Login</button>
                     </div>
                     <div>
                         <button class="primary" type="submit">Submit</button>
