--- a/src/app/containers/auth/signup/signup.component.html
+++ b/src/app/containers/auth/signup/signup.component.html
@@ -70,7 +70,7 @@
                         <span
                             *ngIf="!signUpForm.get('newUserData.confirmPassword').valid && signUpForm.get('newUserData.confirmPassword').touched"
                             class="help-block">
-                            Please enter a valid confirmPassword
+                            ConfirmPassword does not match the password
                         </span>
                     </div>
                 </div>
