add-navigation-add-spinner-add-alert-message-fix-buttons-enablity-fix-some-bugs-and-make-the-project-responsive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class="mainContainer">
-    <app-header></app-header>
-    <!-- <h1>This is app</h1> -->
-    <!-- <app-fruits-store></app-fruits-store> -->
-    <!-- <app-login></app-login> -->
-    <!-- <app-signup></app-signup> -->
-    <router-outlet></router-outlet>
+<app-header></app-header>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
 </div>
