--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -13,8 +13,29 @@ img{
 .headerTextContainer{
     color: $white_color;
     margin-left: 5px;
-    font-size: 20px;
+    font-size: 15px;
+    display: flex;
 }
 .headerText{
-    margin: 15px auto;
+    margin: auto;
+}
+.nav {
+    color: $white_color;
+    margin: auto 5px;
+    text-decoration: none;
+    cursor: pointer;
+}
+.navContainer{
+    display: flex;
+}
+.text{
+    color: $white_color;
+}
+ul{
+    list-style: none;
+    margin: 0;
+}
+li{
+    padding: 0px 5px;
+    margin: 0px;
 }
