--- a/src/app/containers/auth/signup/signup.component.html
+++ b/src/app/containers/auth/signup/signup.component.html
@@ -1,7 +1,8 @@
-<div class="container">
-    <div class="row">
         <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-            <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
+            <div *ngIf="isLoading" >
+                <app-loading></app-loading>
+            </div>
+            <form [formGroup]="signUpForm" *ngIf="!isLoading" (ngSubmit)="onSubmit()">
                 <div formGroupName="newUserData">
                     <div class="form-group">
                         <label for="username">User Name</label>
@@ -96,9 +97,8 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <textarea formControlName="questionAnswer" id="questionAnswer" rows="3">
+                        <textarea class="p_1em" formControlName="questionAnswer" id="questionAnswer" rows="3">
                     </textarea>
-                        <!-- <p>Your ansewer: {{questionAnswer}}</p> -->
                     </div>
               
                 <span *ngIf="!signUpForm.valid && signUpForm.touched" class="help-block">
@@ -113,6 +113,10 @@
                     </div>
                 </div>
             </form>
+            <div *ngIf="error">
+                <app-alert-message
+                alertType="ERROR"
+                alertMessage="{{error}}"
+                ></app-alert-message>
+            </div>
         </div>
-    </div>
-</div>
