--- a/src/app/containers/auth/signup/signup.component.scss
+++ b/src/app/containers/auth/signup/signup.component.scss
@@ -1,7 +1,8 @@
 @import "../../../../assets//scss/constants.scss";
 
-.container {
+.signup {
   margin-top: 30px;
+  font-size: 20px;
 }
 
 input.ng-invalid.ng-touched {
@@ -14,21 +15,6 @@ textarea{
  display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
-}
-button {
-  padding: 5px;
-  font-size: 20px;
-  cursor: pointer;
-}
-.primary {
-  background-color: $pink_color;
-  border-color: $pink_color;
-  color: $white_color;
-}
-.secondary {
-  background-color: $green_color;
-  border-color: $green_color;
-  color: $white_color;
 }
 .p_1em{
   padding: 1em;
