--- a/src/app/containers/auth/login/login.component.html
+++ b/src/app/containers/auth/login/login.component.html
@@ -26,7 +26,7 @@
                             </button>
                         </div>
                         <div>
-                            <button class=" fieldContainer primary" type="submit">
+                            <button class=" fieldContainer primary" type="submit" [disabled]="!loginForm.valid" >
                                 Login
                             </button>
                         </div>
