--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: space-between;
     background-color: $blue_color;
+    line-height: initial;
 }
 img{
     width: 50px;
@@ -13,15 +14,13 @@ img{
 .headerTextContainer{
     color: $white_color;
     margin-left: 5px;
-    font-size: 15px;
+    font-size: 20px;
     display: flex;
-}
-.headerText{
-    margin: auto;
+    align-items: center;
 }
 .nav {
     color: $white_color;
-    margin: auto 5px;
+    margin: 0 5px;
     text-decoration: none;
     cursor: pointer;
 }
@@ -37,5 +36,11 @@ ul{
 }
 li{
     padding: 0px 5px;
+    margin: 0px;
+}
+.center {
+    align-items: center;
+}
+.mr-0 {
     margin: 0px;
 }
