--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,6 +6,40 @@
         <div class="imgContainer">
             <img src="../../../assets/img/logo-transparent.png">
         </div>
+        <div>
+            <div class="dropdown" appDropdown>
+                <a class="nav" class="dropdown-toggle" role="button">
+                    <img src="../../../assets/svg/menu.svg" alt="menu" class="menu">
+                </a>
+                <ul class="dropdown-menu dropdown-menu-right">
+                    <div class="center">
+                        <li routerLinkActive="active">
+                            <a class="nav" routerLink="/store">Store</a>
+                        </li>
+                    </div>
+                    <div class="center">
+                        <li routerLinkActive="active" *ngIf="isAuthenticated">
+                            <a class="nav" routerLink="/checkout">Checkout</a>
+                        </li>
+                    </div>
+                    <div class="center">
+                        <li routerLinkActive="active" *ngIf="isAuthenticated">
+                            <a class="nav" routerLink="/orders">Orders</a>
+                        </li>
+                    </div>
+                    <div class="center">
+                        <li routerLinkActive="active" *ngIf="!isAuthenticated">
+                            <a class="nav" routerLink="/login">Login</a>
+                        </li>
+                    </div>
+                    <div class="center">
+                        <li routerLinkActive="active" *ngIf="isAuthenticated">
+                            <a class="nav" routerLink="/logout" (click)="onLogout()">Logout</a>
+                        </li>
+                    </div>
+                </ul>
+            </div>
+        </div>
         <div class="headerTextContainer">
             <ul class="headerTextContainer navContainer">
                 <div class="center">
