fix-header-icon

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,12 @@
 <nav>
     <div class="headerContainer">
-        <div class="headerTextContainer">
-            <p class="mr-0">Fruits Store</p>
-        </div>
-        <div class="imgContainer">
-            <img src="../../../assets/img/logo-transparent.png">
+        <div class="navContainer">
+            <div class="imgContainer">
+                <img src="../../../assets/img/logo-transparent.png">
+            </div>
+            <div class="headerTextContainer">
+                <p class="mr-0">Fruits Store</p>
+            </div>
         </div>
         <div>
             <div class="dropdown" appDropdown>
