--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -9,7 +9,7 @@ img{
     width: 50px;
 }
 .imgContainer{
-    margin: auto 0;
+    margin: auto;
 }
 .headerTextContainer{
     color: $white_color;
